자료구조 시간복잡도

--- a/Algorithm/자료구조_시간복잡도.md
+++ b/Algorithm/자료구조_시간복잡도.md
@@ -13,7 +13,10 @@
 
 ### 2. 알고리즘 복잡도 계산 항목
 1. **시간 복잡도**: 알고리즘 실행 속도
+   - 가장 빨리 결과가 나와서 풀수있는 코드가 중요
 2. **공간 복잡도**: 알고리즘이 사용하는 메모리 사이즈
+   - 예전엔 메모리 부족으로 메모리 할당도 중요한 항목
+     - 변수를 얼마나 지정하였는지
 
 > 가장 중요한 시간 복잡도를 꼭 이해하고 계산할 수 있어야 함
 
@@ -21,9 +24,33 @@
 
 ### 알고리즘 시간 복잡도의 주요 요소
 
-* 반복문이 지배합니다.
+* **반복문이 지배합니다.**
+
+---
+
+<div class="alert alert-block alert-warning">
+<strong><font color="blue" size="3em">생각해보기: 자동차로 서울에서 부산을 가기 위해, 다음과 같이 항목을 나누었을 때, 가장 총 시간에 영향을 많이 미칠 것 같은 요소는?</font></strong><br>
+
+* 예: 
+  - 자동차로 서울에서 부산가기
+    1. 자동차 문열기
+    2. 자동차 문닫기
+    3. 자동차 운전석 등받이 조정하기
+    4. 자동차 시동걸기
+    5. 자동차로 서울에서 부산가기
+    6. 자동차 시동끄기
+    7. 자동차 문열기
+    8. 자동차 문닫기
+
+---
+
+
+
+#### 마찬가지로, 프로그래밍에서 시간 복잡도에 가장 영향을 많이 미치는 요소는 반복문
 
 * 입력의 크기가 커지면 커질수록 반복문이 알고리즘 수행 시간을 지배함
+
+
 
 
 
@@ -77,7 +104,9 @@
                     for index in range(n):
                          print(index)
        ```
-
+     
+       <img src="http://www.fun-coding.org/00_Images/bigo.png" width=400/>
+  
 * 빅 오 입력값 표기 방법
   - 예: 
     - 만약 시간 복잡도 함수가 2$n^2$ + 3n 이라면
