URL과 웹 브라우저 요청 흐름

--- a/HTTP/2.URI_웹브라우저.md
+++ b/HTTP/2.URI_웹브라우저.md
@@ -155,3 +155,40 @@
 - html 내부 북마크 등에 사용 
 - 서버에 전송하는 정보 아님
 
+
+
+
+
+# 웹 브라우저 요청 흐름
+
+![image-20211025213039224](2.URI_웹브라우저.assets/image-20211025213039224.png)
+
+
+
+- **GET** /search?q=hello&hl=ko HTTP/1.1
+
+
+
+### HTTP 메세지 전송
+
+![image-20211025213222289](2.URI_웹브라우저.assets/image-20211025213222289.png)
+
+- 노란색박스 - TCP/IP 패킷
+  - 출발지 IP, PORT, 목적지 IP, PORT, 전송데이터 등..
+
+
+
+
+
+### HTTP 응답 메세지
+
+```html
+HTTP/1.1 200 OK
+Content-Type: text/html;charset=UTF-8
+Content-Length: 3423
+
+<html>
+    <body>...</body>
+</html>
+```
+
