--- a/HTTP/3.HTTP.md
+++ b/HTTP/3.HTTP.md
@@ -67,3 +67,73 @@
 
 ### Stateful, Stateless 차이
 
+#### 1.상태 유지 - Stateful
+
+``````
+- 고객 : 이 **노트북** 얼마인가요?
+- 점원 : 100만원 입니다. **(노트북 상태 유지)**
+
+
+- 고객 : **2개** 구매하겠습니다.
+- 점원 : 200만원 입니다. **신용카드, 현금중**에 어떤 걸로 구매 하시겠어요? **(노트북, 2개 상태 유지)**
+
+
+- 고객 : 신용카드로 구매하겠습니다. 
+- 점원 : 200만원 결제 완료되었습니다. **(노트북, 2개, 신용카드 상태 유지)**
+``````
+
+- **상태 유지** : 중간에 다른 점원으로 바뀌면 안된다. (중간에 다른 점원으로 바뀔 때 상태 정보를 다른 점원에게 미리 알려줘야 한다.)
+
+![image-20211028135112604](3.HTTP.assets/image-20211028135112604.png)
+
+##### 중간에 서버가 장애발생한다면?
+
+응답이 클라이언트로 전송을 하지못한다.
+
+
+
+#### 2. 무상태 - Stateless, 점원이 중간에 바뀌면?
+
+``````
+- 고객 : 이 **노트북** 얼마인가요?
+- 점원A : 100만원 입니다. **(노트북 상태 유지)**
+
+
+- 고객 : **2개** 구매하겠습니다.
+- 점원B : 200만원 입니다. **신용카드, 현금중**에 어떤 걸로 구매 하시겠어요? **(노트북, 2개 상태 유지)**
+
+
+- 고객 : 신용카드로 구매하겠습니다. 
+- 점원C : 200만원 결제 완료되었습니다. **(노트북, 2개, 신용카드 상태 유지)**
+``````
+
+- **무상태** : 중간에 다른 점원으로 바뀌어도 된다. 
+  - 갑자기 고객이 증가해도 점원을 대거 투입할 수 있다. 
+  - 갑자기 클라이언트 요청이 증가해도 서버를 대거 투입할 수 있다. 
+    - **스케일 아웃** - 수평 확장 유리
+- 무상태는 응답 서버를 쉽게 바꿀 수 있다. -> **무한한 서버 증설 가능**
+
+![image-20211028135151266](3.HTTP.assets/image-20211028135151266.png)
+
+##### 중간에 서버가 장애발생한다면?
+
+다른 서버가 응답을 하면된다.
+
+
+
+#### 3. Stateless 실무 한계
+
+- 모든 것을 무상태로 설계 할 수 있는 경우도 있고 없는 경우도 있다. 
+- 무상태
+  - 예) 로그인이 필요 없는 단순한 서비스 소개 화면 
+- 상태 유지
+  - 예) 로그인
+- 로그인한 사용자의 경우 로그인 했다는 상태를 서버에 유지 
+- 일반적으로 브라우저 쿠키와 서버 세션등을 사용해서 상태 유지 
+- 상태 유지는 최소한만 사용
+
+
+
+
+
+## 비 연결성(connectionless)
