URL관련 공부 Update

--- a/HTTP/2.URI_웹브라우저.md
+++ b/HTTP/2.URI_웹브라우저.md
@@ -2,14 +2,17 @@
 
 - **URI(Uniform Resource Identifier)**
 
-  > Uniform : 리소스 식별하는 통일된 방식
+  > **Uniform** : 리소스 식별하는 통일된 방식
   >
-  > Resource : 자원, URI로 식별할 수 있는 모든 것(제한 없음)
+  > **Resource** : 자원, URI로 식별할 수 있는 모든 것(제한 없음)
   >
-  > Identifier : 다른 항목과 구분하는데 필요한 정보
+  > **Identifier** : 다른 항목과 구분하는데 필요한 정보
 
   - 로케이터(Locator), 이름(name) 또는 둘다 추가로 분류될 수 있다.
-
+  - URI에 URL과 URN이 포함됩니다.
+  
+  
+  
   ![image-20211022153237194](2.URI_웹브라우저.assets/image-20211022153237194.png)
 
 
@@ -24,10 +27,14 @@
 
 - **URL(Uniform Resource Locator**) - Locator: 리소스가 있는 위치를 지정
 - **URN(Uniform Resource Name)** - Name: 리소스에 이름을 부여
+  - URN은 이름을 부여하면 주소를 찾을수가 없어서 URL만 사용
 - 위치는 변할 수 있지만, 이름은 변하지 않는다. 
 - urn:isbn:8960777331 (어떤 책의 isbn URN) 
+  - 예전에 한번 사용해봤던 방식
 - URN 이름만으로 실제 리소스를 찾을 수 있는 방법이 보편화 되지 않는다
-- **앞으로 URI를 URL과 같은 의미로 이야기하겠습니다.**
+- **URI를 URL과 같은 의미로 이야기하겠습니다.**
+
+
 
 
 
@@ -45,11 +52,13 @@
 
 
 
+
+
 ### URL scheme
 
-> scheme:
+> **scheme:**
 >
-> https:
+> **https:**
 
 ##### `scheme://[userinfo@]host[:port][/path][?query][#fragment]`
 
@@ -63,9 +72,11 @@
 
 
 
+
+
 ### URL userinfo
 
-> [userinfo@]
+> **[userinfo@]**
 
 ##### `scheme://[userinfo@]host[:port][/path][?query][#fragment]`
 
@@ -76,11 +87,13 @@
 
 
 
+
+
 ### URL host
 
-> host
+> **host**
 >
-> www.google.com
+> **www.google.com**
 
 ##### `scheme://[userinfo@]host[:port][/path][?query][#fragment]` 
 
@@ -91,11 +104,13 @@
 
 
 
+
+
 ### URL PORT
 
-> [:PORT]
+> **[:PORT]**
 >
-> :443
+> **:443**
 
 ##### `scheme://[userinfo@]host[:port][/path][?query][#fragment]` 
 
@@ -107,11 +122,13 @@
 
 
 
+
+
 ### URL path
 
-> [/path]
+> **[/path]**
 >
-> /search
+> **/search**
 
 ##### `scheme://[userinfo@]host[:port][/path][?query][#fragment]` 
 
@@ -125,11 +142,13 @@
 
 
 
+
+
 ### URL query
 
-> [?query]
+> **[?query]**
 >
-> q=hello&hl=ko
+> **q=hello&hl=ko**
 
 ##### `scheme://[userinfo@]host[:port][/path][?query][#fragment]` 
 
@@ -141,11 +160,13 @@
 
 
 
+
+
 ### URL fragment
 
-> [#fragment]
+> **[#fragment]**
 >
-> #getting-started-introducing-spring-boot
+> **#getting-started-introducing-spring-boot**
 
 ##### `scheme://[userinfo@]host[:port][/path][?query][#fragment]` 
 
@@ -166,6 +187,8 @@
 
 
 - **GET** /search?q=hello&hl=ko HTTP/1.1
+
+
 
 
 
