비연결성과 HTTP 메시지 Update

--- a/HTTP/3.HTTP.md
+++ b/HTTP/3.HTTP.md
@@ -16,7 +16,7 @@
 
 - HTML, TEXT
 - IMAGE, 음성, 영상, 파일
-- JSON, XML(API)
+- 서버끼리 통신하는 JSON, XML(API)
 - 거의 모든 형태의 데이터 전송 가능
 - 서버간에 데이터를 주고 받을 때도 대부분 HTTP사용
 - **지금은 HTTP 시대!**
@@ -28,7 +28,7 @@
 - TCP : HTTP/1.1, HTTP/2
 - UDP : HTTP/3
 - 현재 HTTP/1.1 주로 사용
-  - HTTP/2, HTTP/3도 점점 증가
+  - HTTP/2, HTTP/3도 점점 증가 - 2와 3는 성능개선에 초점이 맞춰있음
 
 
 
@@ -53,6 +53,15 @@
 
 
 
+클라이언트와 서버를 개념적으로 분리를 합니다.
+
+- 클라이언트 - UI/UX, 사용성 등
+
+- 서버 - 비지니스 로직, 데이터 등
+  - 대용량 트래픽이 발생할 경우 서버구조만 바꾸면 되는 구조
+
+
+
 
 
 ## 무상태 프로토콜
@@ -71,20 +80,24 @@
 
 ``````
 - 고객 : 이 **노트북** 얼마인가요?
-- 점원 : 100만원 입니다. **(노트북 상태 유지)**
+- 점원 : 100만원 입니다. (노트북 상태 유지)
 
 
 - 고객 : **2개** 구매하겠습니다.
-- 점원 : 200만원 입니다. **신용카드, 현금중**에 어떤 걸로 구매 하시겠어요? **(노트북, 2개 상태 유지)**
+- 점원 : 200만원 입니다. 신용카드, 현금중에 어떤 걸로 구매 하시겠어요? (노트북, 2개 상태 유지)
 
 
-- 고객 : 신용카드로 구매하겠습니다. 
-- 점원 : 200만원 결제 완료되었습니다. **(노트북, 2개, 신용카드 상태 유지)**
+- 고객 : **신용카드**로 구매하겠습니다. 
+- 점원 : 200만원 결제 완료되었습니다. (노트북, 2개, 신용카드 상태 유지)
 ``````
 
-- **상태 유지** : 중간에 다른 점원으로 바뀌면 안된다. (중간에 다른 점원으로 바뀔 때 상태 정보를 다른 점원에게 미리 알려줘야 한다.)
+- **상태 유지** : 중간에 다른 점원으로 바뀌지 않고 기존 점원(클라이언트)에게 알려줘야합니다. **(중간에 다른 점원으로 바뀔 때 상태 정보를 다른 점원에게 미리 알려줘야 한다.)**
+
+
 
 ![image-20211028135112604](3.HTTP.assets/image-20211028135112604.png)
+
+
 
 ##### 중간에 서버가 장애발생한다면?
 
@@ -96,24 +109,28 @@
 
 ``````
 - 고객 : 이 **노트북** 얼마인가요?
-- 점원A : 100만원 입니다. **(노트북 상태 유지)**
+- 점원A : 100만원 입니다. (노트북 상태 유지)
 
 
-- 고객 : **2개** 구매하겠습니다.
-- 점원B : 200만원 입니다. **신용카드, 현금중**에 어떤 걸로 구매 하시겠어요? **(노트북, 2개 상태 유지)**
+- 고객  : **노트북 2개** 구매하겠습니다.
+- 점원B : 노트북 2개는 200만원 입니다. 신용카드, 현금중에 어떤 걸로 구매 하시겠어요? (노트북, 2개 상태 유지)
 
 
-- 고객 : 신용카드로 구매하겠습니다. 
-- 점원C : 200만원 결제 완료되었습니다. **(노트북, 2개, 신용카드 상태 유지)**
+- 고객  : **노트북 2개를 신용카드**로 구매하겠습니다. 
+- 점원C : 200만원 결제 완료되었습니다. (노트북, 2개, 신용카드 상태 유지)
 ``````
 
-- **무상태** : 중간에 다른 점원으로 바뀌어도 된다. 
+- **무상태** : 중간에 다른 점원으로 바뀌어도 된다.  **(클라이언트에서 필요한 정보를 서버에 보내기 때문)**
   - 갑자기 고객이 증가해도 점원을 대거 투입할 수 있다. 
   - 갑자기 클라이언트 요청이 증가해도 서버를 대거 투입할 수 있다. 
     - **스케일 아웃** - 수평 확장 유리
 - 무상태는 응답 서버를 쉽게 바꿀 수 있다. -> **무한한 서버 증설 가능**
 
+
+
 ![image-20211028135151266](3.HTTP.assets/image-20211028135151266.png)
+
+
 
 ##### 중간에 서버가 장애발생한다면?
 
@@ -143,6 +160,33 @@
 - 1시간 동안 수천명이 서비스를 사용해도 실제 서버에서 동시에 처리하는 요청은 수십개 이 하로 매우 작음 
   - 예) 웹 브라우저에서 계속 연속해서 검색 버튼을 누르지는 않는다.
 - 서버 자원을 매우 효율적으로 사용할 수 있음
+
+
+
+
+
+### 연결을 유지하는 모델
+
+- 클라이언트 2와 3이 놀고있어도 연결을 유지해야한다.
+
+![image-20211104143921852](3.HTTP.assets/image-20211104143921852.png)
+
+
+
+
+
+### 연결을 유지하지 않는 모델
+
+- 서버 연결 유지 X
+- 최소한의 자원 사용
+
+![image-20211104144134391](3.HTTP.assets/image-20211104144134391.png)
+
+
+
+![image-20211104144155938](3.HTTP.assets/image-20211104144155938.png)
+
+- 클라이언트에서 서버에 요청을 보낸후에 바로 연결을 종료합니다.
 
 
 
@@ -183,3 +227,73 @@
 - 예) 선착순 이벤트, 명절 KTX 예약, 학과 수업 등록 
 - 예) 저녁 6:00 선착순 1000명 치킨 할인 이벤트 -> 수만명 동시 요청
 
+
+
+
+
+## HTTP 메시지
+
+##### HTTP 요청 메시지
+
+```http
+GET /search?q=hello&hl=ko HTTP/1.1		- start-line 시작 라인
+Host: www.google.com					- header
+```
+
+- start-line : **request-line** / status-line 
+- **request-line** : method SP(공백) request-target SP HTTP-version CRLF(엔터) 
+- **HTTP 메서드** (GET: 조회) 
+  - 종류 : GET, POST, PUT, DELETE ...
+  - 서버가 수행해야 할 동작 지정
+    - **GET** : 리소스 조회
+    - **POST** : 요청 내역 처리
+- 요청 대상 (/search?q=hello&hl=ko) 
+- HTTP Version
+- **요청 메시지도 message body를 가질 수 있음**
+
+
+
+##### HTTP 응답 메시지
+
+```http
+HTTP/1.1 200 OK							- start-line 시작 라인
+Content-Type: text/html;charset=UTF-8	- header
+Content-Length: 3423
+
+<html>									- message-body
+	<body>...</body>
+</html>
+```
+
+- start-line = request-line / **status-line **
+- **status-line** = HTTP-version SP status-code SP reason-phrase CRLF 
+- HTTP 버전 
+- HTTP 상태 코드: 요청 성공, 실패를 나타냄 
+  - 200: 성공 
+  - 400: 클라이언트 요청 오류 
+  - 500: 서버 내부 오류 
+- 이유 문구: 사람이 이해할 수 있는 짧은 상태 코드 설명 글
+
+
+
+
+
+#### HTTP 헤더
+
+- header-field = field-name ":" OWS field-value OWS (OWS:띄어쓰기 허용) 
+- field-name은 대소문자 구문 없음
+- HTTP 전송에 필요한 모든 부가정보 
+  - 예) 메시지 바디의 내용, 메시지 바디의 크기, 압축, 인증, 요청 클라이언트(브라우저) 정보,  서버 애플리케이션 정보, 캐시 관리 정보... 
+- 표준 헤더가 너무 많음 
+  - https://en.wikipedia.org/wiki/List_of_HTTP_header_fields 
+- 필요시 임의의 헤더 추가 가능 
+  - helloworld: hihi
+
+
+
+
+
+#### HTTP 메시지 바디
+
+- 실제 전송할 데이터 
+- HTML 문서, 이미지, 영상, JSON 등등 byte로 표현할 수 있는 모든 데이터 전송 가능
