--- a/HTTP/4.HTTP_method.md
+++ b/HTTP/4.HTTP_method.md
@@ -102,7 +102,7 @@ Host: www.google.com
 
 
 
-#### 리소스 조회 - 메시지 전달
+#### 리소스 조회1 - 메시지 전달
 
 - 클라이언트
 
@@ -128,7 +128,7 @@ Host: localhost:8080
 
 
 
-### 리소스 조회 - 응답 데이터
+#### 리소스 조회2 - 응답 데이터
 
 - 클라이언트 - 응답 데이터
 
@@ -155,3 +155,207 @@ Content-Length: 34
 ```
 
 ![image-20211105171452911](4.HTTP_method.assets/image-20211105171452911.png)
+
+
+
+
+
+
+
+## POST
+
+```http
+POST /members HTTP/1.1
+Content-Type: application/json
+{
+ "username": "hello",
+ "age": 20
+}
+```
+
+- 요청 데이터 처리
+- **메시지 바디를 통해 서버로 요청 데이터 전달**
+- 서버는 요청 데이터를 처리
+  - 메시지 바디를 통해 들어온 데이터를 처리하는 모든 기능을 수행
+- 주로 전달된 데이터로 신규 리소스 등록, 프로세스를 처리에 사용
+
+
+
+
+
+#### 리소스 등록1 - 메시지 전달
+
+- 클라이언트
+
+```http
+POST /members HTTP/1.1
+Content-Type: application/json
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+
+
+- 서버 - `/members`
+
+```json
+
+```
+
+![image-20211109165941298](4.HTTP_method.assets/image-20211109165941298.png)
+
+
+
+
+
+#### 리소스 등록2 - 신규 리소스 생성
+
+- 서버 - `/members` => `/members/100` 신규 리소스 식별자 생성
+
+```http
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+![image-20211109170053753](4.HTTP_method.assets/image-20211109170053753.png)
+
+
+
+
+
+#### 리소스 등록3 - 응답 데이터
+
+- 클라이언트 - 응답 데이터
+
+```http
+HTTP/1.1 201 Created
+Content-Type: application/json
+Content-Length: 34
+Location: /members/100 
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+
+
+- 서버 - `/members/100`
+
+```json
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+![image-20211105171452911](4.HTTP_method.assets/image-20211105171452911.png)
+
+
+
+
+
+### 요청 데이터를 어떻게 처리한다는 뜻일까?
+
+- 스펙: POST 메서드는 **대상 리소스가 리소스의 고유 한 의미 체계에 따라 요청에 포함 된 표현을 처리하도록 요청**합니다.  
+- 예를 들어 POST는 다음과 같은 기능에 사용됩니다. 
+  - HTML 양식에 입력 된 필드와 같은 데이터 블록을 데이터 처리 프로세스에 제공 
+    - 예) HTML FORM에 입력한 정보로 회원 가입, 주문 등에서 사용 
+  - 게시판, 뉴스 그룹, 메일링 리스트, 블로그 또는 유사한 기사 그룹에 메시지 게시 
+    - 예) 게시판 글쓰기, 댓글 달기 
+  - 서버가 아직 식별하지 않은 새 리소스 생성 
+    - 예) 신규 주문 생성 
+  - 기존 자원에 데이터 추가 
+    - 예) 한 문서 끝에 내용 추가하기
+- **정리: 이 리소스 URI에 POST 요청이 오면 요청 데이터를 어떻게 처리할지 리소스마다 따로 정해야 함 -> 정해진 것이 없음**
+
+
+
+### POST의 정리
+
+1. **새 리소스 생성(등록)  **
+   - 서버가 아직 식별하지 않은 새 리소스 생성
+2. **요청 데이터 처리 **
+   - 단순히 데이터를 생성하거나, 변경하는 것을 넘어서 프로세스를 처리해야 하는 경우 
+   - 예) 주문에서 결제완료 -> 배달시작 -> 배달완료 처럼 단순히 값 변경을 넘어 프로세스의 상태가 변경되는 경우 
+   - POST의 결과로 새로운 리소스가 생성되지 않을 수도 있음 
+   - 예) POST /orders/{orderId}/start-delivery (**컨트롤 URI**)
+3. **다른 메서드로 처리하기 애매한 경우 **
+   - 예) JSON으로 조회 데이터를 넘겨야 하는데, GET 메서드를 사용하기 어려운 경우 
+   - 애매하면 POST
+
+
+
+
+
+## PUT, PATCH, DELETE
+
+### PUT
+
+```http
+PUT /members/100 HTTP/1.1
+Content-Type: application/json
+{
+ "username": "hello",
+ "age": 20
+}
+```
+
+- 리소스를 대체 
+  - 리소스가 있으면 대체 
+  - 리소스가 없으면 생성 
+  - 쉽게 이야기해서 덮어버림
+- **중요! 클라이언트가 리소스를 식별 **
+  - 클라이언트가 리소스 위치를 알고 URI 지정 
+  - POST와 차이점
+
+
+
+
+
+#### 리소스가 있는 경우1
+
+- 클라이언트
+
+```http
+PUT /members/100 HTTP/1.1
+Content-Type: application/json
+{
+ "username": "old",
+ "age": 50
+}
+```
+
+
+
+- 서버 - `/members/100`
+
+```http
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+![image-20211109171100058](4.HTTP_method.assets/image-20211109171100058.png)
+
+
+
+
+
+#### 리소스가 있는 경우2
+
+- 서버 - `/members/100` (리소스 대체)
+
+```http
+{
+ "username": "old",
+ "age": 50
+}
+```
+
+![image-20211109171155642](4.HTTP_method.assets/image-20211109171155642.png)
