--- a/HTTP/4.HTTP_method.md
+++ b/HTTP/4.HTTP_method.md
@@ -359,3 +359,246 @@ Content-Type: application/json
 ```
 
 ![image-20211109171155642](4.HTTP_method.assets/image-20211109171155642.png)
+
+
+
+
+
+#### 리소스가 없는 경우1
+
+- 클라이언트
+
+```http
+PUT /members/100 HTTP/1.1
+Content-Type: application/json
+{
+ "username": "old",
+ "age": 50
+}
+```
+
+![image-20211109171100058](4.HTTP_method.assets/image-20211109171100058.png)
+
+
+
+- 서버 - 신규 리소스 생성
+
+``` http
+{
+ "username": "old",
+ "age": 50
+}
+```
+
+
+
+
+
+#### PUT 주의!
+
+##### 리소스를 완전히 대체한다.
+
+- 클라이언트
+
+```http
+PUT /members/100 HTTP/1.1
+Content-Type: application/json
+{
+ "age": 50
+}
+```
+
+
+
+- 서버
+
+```http
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+
+
+**`"age" : 50`을 클라이언트에서 보낼때 `username`필드가 없으면 완전히 대체한다.**
+
+- 서버
+
+```http
+{
+ "age": 50,
+}
+```
+
+
+
+
+
+### PATCH
+
+```http
+PATCH /members/100 HTTP/1.1
+Content-Type: application/json 
+{
+ "age": 50 
+}
+```
+
+- 리소스 부분 변경
+
+
+
+
+
+#### 리소스 부분 변경1
+
+- 라이언트
+
+```http
+PATCH /members/100 HTTP/1.1
+Content-Type: application/json
+{
+ "age": 50
+}
+```
+
+
+
+- 서버 - `/members/100`
+
+```http
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+![image-20211111155242211](4.HTTP_method.assets/image-20211111155242211.png)
+
+
+
+
+
+#### 리소스 부분 변경2
+
+- 서버 - `/members/100`
+
+```http
+{
+ "username": "young",
+ "age": 50
+}
+```
+
+##### `age`만 `50`으로 변경
+
+
+
+
+
+### DELETE
+
+```http
+DELETE /members/100 HTTP/1.1
+Host: localhost:8080
+```
+
+- 리소스 제거
+
+
+
+
+
+#### 리소스 제거1
+
+- 클라이언트
+
+```http
+DELETE /members/100 HTTP/1.1
+Host: localhost:8080
+```
+
+
+
+- 서버 - `/members/100`
+
+```http
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+![image-20211111155620062](4.HTTP_method.assets/image-20211111155620062.png)
+
+
+
+
+
+#### 리소스 제거2
+
+![image-20211111155648372](4.HTTP_method.assets/image-20211111155648372.png)
+
+
+
+
+
+
+
+# HTTP 메서드의 속성
+
+- 안전 (Safe Methods)
+- 멱등(Idempotent Methods)
+- 캐시가능(Cacheable Methods)
+
+
+
+![image-20211111155907567](4.HTTP_method.assets/image-20211111155907567.png)
+
+출처: https://ko.wikipedia.org/wiki/HTTP
+
+
+
+
+
+### 안전
+
+- 호출해도 리소스를 변경하지 않는다. 
+- Q: 그래도 계속 호출해서, 로그 같은게 쌓여서 장애가 발생하면요? 
+- A: 안전은 해당 리소스만 고려한다. 그런 부분까지 고려하지 않는다.
+
+
+
+
+
+### 멱등
+
+- f(f(x)) = f(x) 
+- 한 번 호출하든 두 번 호출하든 100번 호출하든 결과가 똑같다. 
+- 멱등 메서드 
+  - GET: 한 번 조회하든, 두 번 조회하든 같은 결과가 조회된다. 
+  - PUT: 결과를 대체한다. 따라서 같은 요청을 여러번 해도 최종 결과는 같다. 
+  - DELETE: 결과를 삭제한다. 같은 요청을 여러번 해도 삭제된 결과는 똑같다. 
+  - **POST: 멱등이 아님! 두 번 호출하면 같은 결제가 중복해서 발생할 수 있다.**
+
+- 활용 
+  - 자동 복구 메커니즘 
+  - 서버가 TIMEOUT 등으로 정상 응답을 못주었을 때, 클라이언트가 같은 요청을 다시 해 도 되는가? 판단 근거
+
+- **Q: 재요청 중간에 다른 곳에서 리소스를 변경해버리면?  **
+  - 사용자1: GET -> username:A, age:20 
+  - 사용자2: PUT -> username:A, age:30 
+  - 사용자1: GET -> username:A, age:30 -> 사용자2의 영향으로 바뀐 데이터 조회
+- **A: 멱등은 외부 요인으로 중간에 리소스가 변경되는 것 까지는 고려하지는 않는다.**
+
+
+
+
+
+### 캐시가능
+
+- 응답 결과 리소스를 캐시해서 사용해도 되는가? 
+- GET, HEAD, POST, PATCH 캐시가능 
+- 실제로는 GET, HEAD 정도만 캐시로 사용 
+  - POST, PATCH는 본문 내용까지 캐시 키로 고려해야 하는데, 구현이 쉽지 않음
