HTTP method Update

--- a/HTTP/4.HTTP_method.md
+++ b/HTTP/4.HTTP_method.md
@@ -104,7 +104,7 @@ Host: www.google.com
 
 #### 리소스 조회1 - 메시지 전달
 
-- 클라이언트
+클라이언트
 
 ```http
 GET /members/100 HTTP/1.1
@@ -113,7 +113,7 @@ Host: localhost:8080
 
 
 
-- 서버 - `/members/100`
+서버 - `/members/100`
 
 ```json
 {
@@ -130,7 +130,7 @@ Host: localhost:8080
 
 #### 리소스 조회2 - 응답 데이터
 
-- 클라이언트 - 응답 데이터
+클라이언트 - 응답 데이터
 
 ```http
 HTTP/1.1 200 OK
@@ -145,7 +145,7 @@ Content-Length: 34
 
 
 
-- 서버 - `/members/100`
+서버 - `/members/100`
 
 ```json
 {
@@ -185,7 +185,7 @@ Content-Type: application/json
 
 #### 리소스 등록1 - 메시지 전달
 
-- 클라이언트
+클라이언트
 
 ```http
 POST /members HTTP/1.1
@@ -198,7 +198,7 @@ Content-Type: application/json
 
 
 
-- 서버 - `/members`
+서버 - `/members`
 
 ```json
 
@@ -212,7 +212,7 @@ Content-Type: application/json
 
 #### 리소스 등록2 - 신규 리소스 생성
 
-- 서버 - `/members` => `/members/100` 신규 리소스 식별자 생성
+서버 - `/members` => `/members/100` 신규 리소스 식별자 생성
 
 ```http
 {
@@ -229,7 +229,7 @@ Content-Type: application/json
 
 #### 리소스 등록3 - 응답 데이터
 
-- 클라이언트 - 응답 데이터
+클라이언트 - 응답 데이터
 
 ```http
 HTTP/1.1 201 Created
@@ -244,7 +244,7 @@ Location: /members/100
 
 
 
-- 서버 - `/members/100`
+서버 - `/members/100`
 
 ```json
 {
@@ -319,7 +319,7 @@ Content-Type: application/json
 
 #### 리소스가 있는 경우1
 
-- 클라이언트
+클라이언트
 
 ```http
 PUT /members/100 HTTP/1.1
@@ -332,7 +332,7 @@ Content-Type: application/json
 
 
 
-- 서버 - `/members/100`
+서버 - `/members/100`
 
 ```http
 {
@@ -349,7 +349,7 @@ Content-Type: application/json
 
 #### 리소스가 있는 경우2
 
-- 서버 - `/members/100` (리소스 대체)
+서버 - `/members/100` (리소스 대체)
 
 ```http
 {
@@ -366,7 +366,7 @@ Content-Type: application/json
 
 #### 리소스가 없는 경우1
 
-- 클라이언트
+클라이언트
 
 ```http
 PUT /members/100 HTTP/1.1
@@ -381,7 +381,7 @@ Content-Type: application/json
 
 
 
-- 서버 - 신규 리소스 생성
+서버 - 신규 리소스 생성
 
 ``` http
 {
@@ -398,7 +398,7 @@ Content-Type: application/json
 
 ##### 리소스를 완전히 대체한다.
 
-- 클라이언트
+클라이언트
 
 ```http
 PUT /members/100 HTTP/1.1
@@ -410,7 +410,7 @@ Content-Type: application/json
 
 
 
-- 서버
+서버
 
 ```http
 {
@@ -423,7 +423,7 @@ Content-Type: application/json
 
 **`"age" : 50`을 클라이언트에서 보낼때 `username`필드가 없으면 완전히 대체한다.**
 
-- 서버
+서버
 
 ```http
 {
@@ -453,7 +453,7 @@ Content-Type: application/json
 
 #### 리소스 부분 변경1
 
-- 라이언트
+클라이언트
 
 ```http
 PATCH /members/100 HTTP/1.1
@@ -465,7 +465,7 @@ Content-Type: application/json
 
 
 
-- 서버 - `/members/100`
+서버 - `/members/100`
 
 ```http
 {
@@ -482,7 +482,7 @@ Content-Type: application/json
 
 #### 리소스 부분 변경2
 
-- 서버 - `/members/100`
+서버 - `/members/100`
 
 ```http
 {
@@ -512,7 +512,7 @@ Host: localhost:8080
 
 #### 리소스 제거1
 
-- 클라이언트
+클라이언트
 
 ```http
 DELETE /members/100 HTTP/1.1
@@ -521,7 +521,7 @@ Host: localhost:8080
 
 
 
-- 서버 - `/members/100`
+서버 - `/members/100`
 
 ```http
 {
