--- a/HTTP/6.HTTP_status.md
+++ b/HTTP/6.HTTP_status.md
@@ -44,3 +44,194 @@
 - 201 Created 
 - 202 Accepted 
 - 204 No Content
+
+
+
+
+
+#### 200 OK
+
+Request
+
+```http
+GET /members/100 HTTP/1.1
+Host: localhost:8080
+```
+
+
+
+Response
+
+```http
+HTTP/1.1 200 OK
+Content-Type: application/json
+Content-Length: 34
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+
+
+![image-20211119023659882](6.HTTP_status.assets/image-20211119023659882.png)
+
+
+
+
+
+#### 201 Created
+
+> 요청 성공해서 새로운 리소스가 생성됨
+
+Request
+
+```http
+POST /members HTTP/1.1
+Content-Type: application/json
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+
+
+Response
+
+```http
+HTTP/1.1 201 Created
+Content-Type: application/json
+Content-Length: 34
+Location: /members/100 
+{
+ "username": "young",
+ "age": 20
+}
+```
+
+- `Location: /members/100` - 생성된 리소스는 응답의 Location 헤더 필드로 식별
+
+
+
+![image-20211119023659882](6.HTTP_status.assets/image-20211119023659882.png)
+
+
+
+
+
+#### 202 Accepted
+
+> 요청이 접수되었으나 처리가 완료되지 않았음
+
+- 배치 처리 같은 곳에서 사용 
+- 예) 요청 접수 후 1시간 뒤에 배치 프로세스가 요청을 처리함
+
+
+
+
+
+#### 204 No Content
+
+> 서버가 요청을 성공적으로 수행했지만, 응답 페이로드 본문에 보낼 데이터가 없음
+
+- 예) 웹 문서 편집기에서 save 버튼
+- save 버튼의 결과로 아무 내용이 없어도 된다. 
+- save 버튼을 눌러도 같은 화면을 유지해야 한다. 
+- 결과 내용이 없어도 204 메시지(2xx)만으로 성공을 인식할 수 있다
+
+
+
+
+
+### 3xx - 리다이렉션
+
+> 요청을 완료하기 위해 유저 에이전트의 추가 조치 필요
+
+- 300 Multiple Choices 
+- 301 Moved Permanently 
+- 302 Found 
+- 303 See Other 
+- 304 Not Modified 
+- 307 Temporary Redirect 
+- 308 Permanent Redirect
+
+
+
+
+
+### 리다이렉션 이해
+
+- 웹 브라우저는 3xx 응답의 결과에 Location 헤더가 있으면, Location 위치로 자동 이동 (리다이렉트)
+
+
+
+- **영구 리다이렉션** - 특정 리소스의 URI가 영구적으로 이동 
+  - 예) /members -> /users 
+  - 예) /event -> /new-event 
+- **일시 리다이렉션** - 일시적인 변경 
+  - 주문 완료 후 주문 내역 화면으로 이동 
+  - PRG: Post/Redirect/Get
+- **특수 리다이렉션**
+  - 결과 대신 캐시를 사용
+
+
+
+
+
+#### 자동 리다이렉트 흐름
+
+![image-20211119024137569](6.HTTP_status.assets/image-20211119024137569.png)
+
+
+
+
+
+#### 영구 리다이렉션
+
+> 301, 308
+
+- 리소스의 URI가 영구적으로 이동 
+- 원래의 URL를 사용X, 검색 엔진 등에서도 변경 인지 
+- **301 Moved Permanently **
+  - **리다이렉트시 요청 메서드가 GET으로 변하고, 본문이 제거될 수 있음(MAY) **
+- **308 Permanent Redirect  **
+  - 301과 기능은 같음 
+  - **리다이렉트시 요청 메서드와 본문 유지(처음 POST를 보내면 리다이렉트도 POST 유지)**
+
+
+
+
+
+#### 301
+
+![image-20211119024444541](6.HTTP_status.assets/image-20211119024444541.png)
+
+
+
+
+
+#### 308
+
+![image-20211119024507482](6.HTTP_status.assets/image-20211119024507482.png)
+
+
+
+
+
+
+
+#### 일시적인 리다이렉션
+
+> 302, 307, 303
+
+- 리소스의 URI가 일시적으로 변경 
+- 따라서 검색 엔진 등에서 URL을 변경하면 안됨 
+- **302 Found  **
+  - **리다이렉트시 요청 메서드가 GET으로 변하고, 본문이 제거될 수 있음(MAY) **
+- **307 Temporary Redirect  **
+  - 302와 기능은 같음 
+  - **리다이렉트시 요청 메서드와 본문 유지(요청 메서드를 변경하면 안된다. MUST NOT) **
+- **303 See Other **
+  - 302와 기능은 같음 
+  - **리다이렉트시 요청 메서드가 GET으로 변경**
