--- a/HTTP/6.HTTP_status.md
+++ b/HTTP/6.HTTP_status.md
@@ -26,7 +26,7 @@
 
 
 
-### 1xx (Informational) 
+## 1xx (Informational) 
 
 > 요청이 수신되어 처리중 
 
@@ -36,7 +36,7 @@
 
 
 
-### 2xx (Successful)
+## 2xx (Successful)
 
 > 클라이언트의 요청을 성공적으로 처리
 
@@ -49,7 +49,7 @@
 
 
 
-#### 200 OK
+### 200 OK
 
 Request
 
@@ -80,7 +80,7 @@ Content-Length: 34
 
 
 
-#### 201 Created
+### 201 Created
 
 > 요청 성공해서 새로운 리소스가 생성됨
 
@@ -120,7 +120,7 @@ Location: /members/100
 
 
 
-#### 202 Accepted
+### 202 Accepted
 
 > 요청이 접수되었으나 처리가 완료되지 않았음
 
@@ -131,7 +131,7 @@ Location: /members/100
 
 
 
-#### 204 No Content
+### 204 No Content
 
 > 서버가 요청을 성공적으로 수행했지만, 응답 페이로드 본문에 보낼 데이터가 없음
 
@@ -144,7 +144,7 @@ Location: /members/100
 
 
 
-### 3xx - 리다이렉션
+## 3xx - 리다이렉션
 
 > 요청을 완료하기 위해 유저 에이전트의 추가 조치 필요
 
@@ -179,7 +179,7 @@ Location: /members/100
 
 
 
-#### 자동 리다이렉트 흐름
+### 자동 리다이렉트 흐름
 
 ![image-20211119024137569](6.HTTP_status.assets/image-20211119024137569.png)
 
@@ -187,7 +187,7 @@ Location: /members/100
 
 
 
-#### 영구 리다이렉션
+### 영구 리다이렉션
 
 > 301, 308
 
@@ -221,7 +221,7 @@ Location: /members/100
 
 
 
-#### 일시적인 리다이렉션
+### 일시적인 리다이렉션
 
 > 302, 307, 303
 
@@ -235,3 +235,100 @@ Location: /members/100
 - **303 See Other **
   - 302와 기능은 같음 
   - **리다이렉트시 요청 메서드가 GET으로 변경**
+
+
+
+
+
+#### 예시
+
+- POST로 주문후에 웹 브라우저를 새로고침하면? 
+- 새로고침은 다시 요청 
+- 중복 주문이 될 수 있다.
+
+
+
+PRG: 사용전
+
+![image-20211120013710549](6.HTTP_status.assets/image-20211120013710549.png)
+
+
+
+
+
+### PRG: Post/Redirect/Get
+
+> 일시적인 리다이렉션 - 예시
+
+- POST로 주문후에 새로 고침으로 인한 중복 주문 방지 
+- POST로 주문후에 주문 결과 화면을 GET 메서드로 리다이렉트 
+- 새로고침해도 결과 화면을 GET으로 조회 
+- 중복 주문 대신에 결과 화면만 GET으로 다시 요청
+- PRG 이후 리다이렉트 
+  - URL이 이미 POST -> GET으로 리다이렉트 됨 
+  - 새로 고침 해도 GET으로 결과 화면만 조회
+
+
+
+PRG: Post/Redirect/Get
+
+![image-20211120013536330](6.HTTP_status.assets/image-20211120013536330.png)
+
+
+
+
+
+### 그래서 뭘 써야 하나요?
+
+> 302, 307, 303
+
+- 잠깐 정리 
+  - 302 Found -> GET으로 변할 수 있음 
+  - 307 Temporary Redirect -> 메서드가 변하면 안됨 
+  - 303 See Other -> 메서드가 GET으로 변경
+- 역사 
+  - 처음 302 스펙의 의도는 HTTP 메서드를 유지하는 것 
+  - 그런데 웹 브라우저들이 대부분 GET으로 바꾸어버림(일부는 다르게 동작) 
+  - 그래서 모호한 302를 대신하는 명확한 307, 303이 등장함(301 대응으로 308도 등장) 
+- 현실 
+  - 307, 303을 권장하지만 현실적으로 이미 많은 애플리케이션 라이브러리들이 302를 기본값으로 사용 
+  - 자동 리다이렉션시에 GET으로 변해도 되면 그냥 302를 사용해도 큰 문제 없음
+
+
+
+
+
+### 기타 리다이렉션
+
+> 300, 304
+
+- 300 Multiple Choices: 안쓴다. 
+- 304 Not Modified 
+  - 캐시를 목적으로 사용 
+  - 클라이언트에게 리소스가 수정되지 않았음을 알려준다. 따라서 클라이언트는 로컬PC에 저장된 캐시를 재사용한다. (캐시로 리다이렉트 한다.) 
+  - 304 응답은 응답에 메시지 바디를 포함하면 안된다. (로컬 캐시를 사용해야 하므로) 
+  - 조건부 GET, HEAD 요청시 사용
+
+
+
+
+
+## 4xx (Client Error)
+> 클라이언트 오류
+> 
+
+- 클라이언트의 요청에 잘못된 문법등으로 서버가 요청을 수행할 수 없음 
+- **오류의 원인이 클라이언트에 있음 **
+- 중요! 클라이언트가 이미 잘못된 요청, 데이터를 보내고 있기 때문에, 똑같은 재시도가 실 패함
+
+
+
+
+
+### 400 Bad Request
+
+> 클라이언트가 잘못된 요청을 해서 서버가 요청을 처리할 수 없음
+
+- 요청 구문, 메시지 등등 오류 
+- 클라이언트는 요청 내용을 다시 검토하고, 보내야함 
+- 예) 요청 파라미터가 잘못되거나, API 스펙이 맞지 않을 때
